# dash

./: README.md  pyproject.toml  requirements.txt  test.ds
dash/: __main__.py  grammars.py  interpreter.py
grammars/: basics.lark
vscode/: README.md  dash-0.0.5.vsix  package.json
vscode/syntaxes/: dash.json
